--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+# test coverage
+coverage/
+.nyc_output/
+
+# playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
+# vitest
+.vitest/
