--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-SUPABASE_URL=###
-SUPABASE_KEY=###
+SUPABASE_URL=
+SUPABASE_KEY=
+SUPABASE_ACCESS_TOKEN=
+
+E2E_USERNAME_ID=
+E2E_USERNAME=
+E2E_PASSWORD=
