feat: Add workflow_dispatch input to GitHub Actions build workflow, allowing manual triggering with a specified branch for build and test processes.

--- a/.github/workflow/build.yml
+++ b/.github/workflow/build.yml
@@ -5,6 +5,12 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: "Branch to build and test"
+        required: true
+        default: "master"
 
 jobs:
   lint:
