--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
-    "@astrojs/node": "^9.4.3",
     "@astrojs/react": "^4.3.1",
     "@astrojs/sitemap": "^3.5.1",
+    "@astrojs/vercel": "^9.0.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
